update kode